--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,15 +10,15 @@ services:
       - "3000:3000"
     env_file:
       - .env
-    depends_on:
-      - postgres
+    # depends_on:
+    #   - postgres
     environment:
       - DB_HOST=postgres
-  postgres:
-    image: postgres:alpine
-    ports:
-      - "5432:5432"
-    env_file:
-      - .env
-    environment:
-      - POSTGRES_PASSWORD=${DB_PASS}
+  # postgres:
+  #   image: postgres:alpine
+  #   ports:
+  #     - "5432:5432"
+  #   env_file:
+  #     - .env
+  #   environment:
+  #     - POSTGRES_PASSWORD=${DB_PASS}
