--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "description": "",
   "scripts": {
-    "serve": "node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/index.js",
-    "serve:dev": "nodemon -r ts-node/register/transpile-only -r tsconfig-paths/register dist/index.js",
+    "serve": "node -r ts-node/register/transpile-only -r tsconfig-paths/register dist/app.js",
+    "serve:dev": "nodemon -r ts-node/register/transpile-only -r tsconfig-paths/register dist/app.js",
     "build": "tsc -p tsconfig.json",
-    "dev": "concurrently \"yarn serve:dev\" \"yarn build -w\"",
+    "dev": "yarn build && concurrently \"yarn serve:dev\" \"yarn build -w\"",
     "start": "yarn build && yarn serve",
     "tslint": "tslint -c tslint.json -p tsconfig.json"
   },
@@ -16,6 +16,7 @@
     "@types/express": "^4.16.0",
     "@types/node": "^10.12.18",
     "@types/pg": "^7.4.11",
+    "botkit": "^0.7.0",
     "concurrently": "^4.1.0",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
@@ -24,7 +25,8 @@
     "tsconfig-paths": "^3.7.0",
     "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "winston": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
