--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,6 +6,7 @@ services:
       dockerfile: "docker/Dockerfile.dev"
     volumes:
       - ./src:/app/src
+      - ./logs:/app/logs
     ports:
       - "3000:3000"
     env_file:
