--- a/package.json
+++ b/package.json
@@ -9,26 +9,31 @@
     "build": "tsc -p tsconfig.json",
     "dev": "yarn build && concurrently \"yarn serve:dev\" \"yarn build -w\"",
     "start": "yarn build && yarn serve",
-    "tslint": "tslint -c tslint.json -p tsconfig.json"
+    "lint": "eslint src/**/*.ts"
   },
   "dependencies": {
     "@types/dotenv": "^6.1.0",
     "@types/express": "^4.16.0",
     "@types/node": "^10.12.18",
     "@types/pg": "^7.4.11",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
     "botkit": "^0.7.0",
     "concurrently": "^4.1.0",
     "dotenv": "^6.2.0",
+    "eslint": "5.3.0",
+    "eslint-import-resolver-typescript": "^1.1.1",
     "express": "^4.16.4",
+    "fecha": "^3.0.2",
     "pg": "^7.8.0",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.7.0",
-    "tslint": "^5.12.1",
-    "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.2.2",
     "winston": "^3.1.0"
   },
   "devDependencies": {
+    "eslint-config-airbnb-base": "13.1.0",
+    "eslint-plugin-import": "^2.16.0",
     "nodemon": "^1.18.9"
   }
 }
